2008-08-18  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/compressor.c: renamed...
	* plug-ins/common/file-compressor.c: ...to this.

	* plug-ins/common/plugin-defs.pl: changed accordingly.

	* plug-ins/common/Makefile.am: regenerated.

2008-08-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-xbm.c
	* plug-ins/common/file-xpm.c
	* plug-ins/common/file-xwd.c: for the most common errors, pass the
	error message with the return values instead of calling g_message().

2008-08-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-wmf.c: pass error message with the return
	values instead of calling g_message().

2008-08-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-raw.c
	* plug-ins/common/file-tga.c
	* plug-ins/common/file-tiff-load.c	
	* plug-ins/common/file-tiff-save.c: pass error messages with the
	return values instead of calling g_message().

2008-08-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-pnm.c
	* plug-ins/common/file-ps.c
	* plug-ins/common/file-psp.c: for the most common errors, pass the
	error message with the return values instead of calling g_message().

2008-08-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-mng.c
	* plug-ins/common/file-pcx.c: for the most common errors, pass the
	error message with the return values instead of calling g_message().

	* plug-ins/common/file-gif-save.c
	* plug-ins/common/file-pdf.c
	* plug-ins/common/file-png.c: minor cleanup.

2008-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-pdf.c: in case of an error, pass the error
	message with the return values.

2008-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-gif-load.c
	* plug-ins/common/file-gif-save.c: for the most common errors,
	pass the error message with the return values instead of calling
	g_message().

	* plug-ins/common/file-png.c: unmarked a string for translation.
	This error condition can't possibly happen.
