@@ -88,10 +88,12 @@ static void       run            (const gchar      *name,
                                   gint             *nreturn_vals,
                                   GimpParam       **return_vals);
 
-static gint32     load_image     (const gchar      *filename);
+static gint32     load_image     (const gchar      *filename,
+                                  GError          **error);
 static gboolean   save_image     (const gchar      *filename,
                                   gint32            image_ID,
-                                  gint32            drawable_ID);
+                                  gint32            drawable_ID,
+                                  GError          **error);
 
 static gboolean   save_dialog    (void);
 static void       entry_callback (GtkWidget        *widget,
@@ -189,12 +191,13 @@ run (const gchar      *name,
      gint             *nreturn_vals,
      GimpParam       **return_vals)
 {
-  static GimpParam  values[2];
-  GimpRunMode       run_mode;
-  GimpPDBStatusType status = GIMP_PDB_SUCCESS;
-  gint32            image_ID;
-  gint32            drawable_ID;
-  GimpExportReturn  export = GIMP_EXPORT_CANCEL;
+  static GimpParam   values[2];
+  GimpRunMode        run_mode;
+  GimpPDBStatusType  status = GIMP_PDB_SUCCESS;
+  gint32             image_ID;
+  gint32             drawable_ID;
+  GimpExportReturn   export = GIMP_EXPORT_CANCEL;
+  GError            *error  = NULL;
 
   run_mode = param[0].data.d_int32;
 
@@ -208,7 +211,7 @@ run (const gchar      *name,
 
   if (strcmp (name, LOAD_PROC) == 0)
     {
-      image_ID = load_image (param[1].data.d_string);
+      image_ID = load_image (param[1].data.d_string, &error);
 
       if (image_ID != -1)
 	{
@@ -292,7 +295,8 @@ run (const gchar      *name,
 
       if (status == GIMP_PDB_SUCCESS)
 	{
-	  if (save_image (param[3].data.d_string, image_ID, drawable_ID))
+	  if (save_image (param[3].data.d_string, image_ID, drawable_ID,
+                          &error))
 	    {
 	      gimp_set_data (SAVE_PROC, &info, sizeof (info));
 	    }
@@ -322,11 +326,19 @@ run (const gchar      *name,
       status = GIMP_PDB_CALLING_ERROR;
     }
 
+  if (status != GIMP_PDB_SUCCESS && error)
+    {
+      *nreturn_vals = 2;
+      values[1].type          = GIMP_PDB_STRING;
+      values[1].data.d_string = error->message;
+    }
+
   values[0].data.d_status = status;
 }
 
 static gint32
-load_image (const gchar *filename)
+load_image (const gchar  *filename,
+            GError      **error)
 {
   gchar             *name;
   gint               fd;
@@ -345,8 +357,9 @@ load_image (const gchar *filename)
 
   if (fd == -1)
     {
-      g_message (_("Could not open '%s' for reading: %s"),
-                 gimp_filename_to_utf8 (filename), g_strerror (errno));
+      g_set_error (error, G_FILE_ERROR, g_file_error_from_errno (errno),
+                   _("Could not open '%s' for reading: %s"),
+                   gimp_filename_to_utf8 (filename), g_strerror (errno));
       return -1;
     }
 
@@ -408,8 +421,9 @@ load_image (const gchar *filename)
 
       if ((read (fd, temp, bn_size)) < bn_size)
 	{
-	  g_message (_("Error in GIMP brush file '%s'"),
-                     gimp_filename_to_utf8 (filename));
+          g_set_error (error, G_FILE_ERROR, G_FILE_ERROR_FAILED,
+                       _("Error in GIMP brush file '%s'"),
+                       gimp_filename_to_utf8 (filename));
 	  close (fd);
 	  g_free (temp);
 	  return -1;
@@ -578,9 +592,10 @@ load_image (const gchar *filename)
 }
 
 static gboolean
-save_image (const gchar *filename,
-	    gint32       image_ID,
-	    gint32       drawable_ID)
+save_image (const gchar  *filename,
+	    gint32        image_ID,
+	    gint32        drawable_ID,
+            GError      **error)
 {
   gint          fd;
   BrushHeader   bh;
@@ -613,8 +628,9 @@ save_image (const gchar *filename,
 
   if (fd == -1)
     {
-      g_message (_("Could not open '%s' for writing: %s"),
-                 gimp_filename_to_utf8 (filename), g_strerror (errno));
+      g_set_error (error, G_FILE_ERROR, g_file_error_from_errno (errno),
+                   _("Could not open '%s' for writing: %s"),
+                   gimp_filename_to_utf8 (filename), g_strerror (errno));
       return FALSE;
     }
 
