@@ -63,10 +63,12 @@ static void       run            (const gchar      *name,
 				  const GimpParam  *param,
 				  gint             *nreturn_vals,
 				  GimpParam       **return_vals);
-static gint32     load_image     (const gchar      *filename);
+static gint32     load_image     (const gchar      *filename,
+                                  GError          **error);
 static gboolean   save_image     (const gchar      *filename,
 				  gint32            image_ID,
-				  gint32            drawable_ID);
+				  gint32            drawable_ID,
+                                  GError          **error);
 
 static gboolean   save_dialog    (void);
 
@@ -159,12 +161,13 @@ run (const gchar      *name,
      gint             *nreturn_vals,
      GimpParam       **return_vals)
 {
-  static GimpParam  values[2];
-  GimpRunMode       run_mode;
-  GimpPDBStatusType status = GIMP_PDB_SUCCESS;
-  gint32            image_ID;
-  gint32            drawable_ID;
-  GimpExportReturn  export = GIMP_EXPORT_CANCEL;
+  static GimpParam   values[2];
+  GimpRunMode        run_mode;
+  GimpPDBStatusType  status = GIMP_PDB_SUCCESS;
+  gint32             image_ID;
+  gint32             drawable_ID;
+  GimpExportReturn   export = GIMP_EXPORT_CANCEL;
+  GError            *error  = NULL;
 
   run_mode = param[0].data.d_int32;
 
@@ -178,7 +181,7 @@ run (const gchar      *name,
 
   if (strcmp (name, LOAD_PROC) == 0)
     {
-      image_ID = load_image (param[1].data.d_string);
+      image_ID = load_image (param[1].data.d_string, &error);
 
       if (image_ID != -1)
 	{
@@ -261,7 +264,8 @@ run (const gchar      *name,
 
       if (status == GIMP_PDB_SUCCESS)
 	{
-	  if (save_image (param[3].data.d_string, image_ID, drawable_ID))
+	  if (save_image (param[3].data.d_string, image_ID, drawable_ID,
+                          &error))
 	    {
 	      gimp_set_data (SAVE_PROC, description, sizeof (description));
 	    }
@@ -291,11 +295,19 @@ run (const gchar      *name,
       status = GIMP_PDB_CALLING_ERROR;
     }
 
+  if (status != GIMP_PDB_SUCCESS && error)
+    {
+      *nreturn_vals = 2;
+      values[1].type          = GIMP_PDB_STRING;
+      values[1].data.d_string = error->message;
+    }
+
   values[0].data.d_status = status;
 }
 
 static gint32
-load_image (const gchar *filename)
+load_image (const gchar  *filename,
+            GError      **error)
 {
   gint              fd;
   PatternHeader     ph;
@@ -314,8 +326,9 @@ load_image (const gchar *filename)
 
   if (fd == -1)
     {
-      g_message (_("Could not open '%s' for reading: %s"),
-                 gimp_filename_to_utf8 (filename), g_strerror (errno));
+      g_set_error (error, G_FILE_ERROR, g_file_error_from_errno (errno),
+                   _("Could not open '%s' for reading: %s"),
+                   gimp_filename_to_utf8 (filename), g_strerror (errno));
       return -1;
     }
 
@@ -429,9 +442,10 @@ load_image (const gchar *filename)
 }
 
 static gboolean
-save_image (const gchar *filename,
-	    gint32       image_ID,
-	    gint32       drawable_ID)
+save_image (const gchar  *filename,
+	    gint32        image_ID,
+	    gint32        drawable_ID,
+            GError      **error)
 {
   gint          fd;
   PatternHeader ph;
@@ -444,8 +458,9 @@ save_image (const gchar *filename,
 
   if (fd == -1)
     {
-      g_message (_("Could not open '%s' for writing: %s"),
-                 gimp_filename_to_utf8 (filename), g_strerror (errno));
+      g_set_error (error, G_FILE_ERROR, g_file_error_from_errno (errno),
+                   _("Could not open '%s' for writing: %s"),
+                   gimp_filename_to_utf8 (filename), g_strerror (errno));
       return FALSE;
     }
 
