@@ -1,3 +1,13 @@
+2008-08-18  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/file-gbr.c
+	* plug-ins/common/file-gih.c
+	* plug-ins/common/file-pat.c
+	* plug-ins/common/file-pix.c
+	* plug-ins/common/file-sunras.c: for the most common errors, pass
+	the error message with the return values instead of calling
+	g_message().
+
 2008-08-18  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/compressor.c: renamed...
